@@ -1,8 +1,10 @@
 .sidebar {
-  flex: 0 0 $sidebar-width;
+  flex: 0 0 auto;
+  max-width: 12em;
   overflow-y: auto;
+  padding: 0 $base-spacing;
 
-  &-logo {
+  &__logo {
     height: 6em;
 
     img {
@@ -12,18 +14,14 @@
     }
   }
 
-  &-list {
-    @include fill-parent;
-  }
-
-  a {
+  &__link {
     @include fill-parent;
     color: $base-font-color;
     display: block;
     padding-top: $base-spacing;
     transition: color 0.05s linear;
 
-    &.active {
+    &--active {
       color: $blue;
       font-weight: $bold-font-weight;
     }
